fix overlapping ribbon

--- a/src/bootstrap-gisp/less/gisp-theme/_map-gallery.less
+++ b/src/bootstrap-gisp/less/gisp-theme/_map-gallery.less
@@ -183,8 +183,7 @@
     display: none;
     position: absolute;
     left: -5px;
-    top: -5px;
-    z-index: 1;
+    top: -5px;    
     overflow: hidden;
     width: 75px;
     height: 75px;
